@@ -1,4 +1,5 @@
 0.03
+ - Add tests for Lego::Part class.
  - Move author tests to xt/ directory.
 
 0.02 2015-08-24T11:31:45+02:00
